; ModuleID = '/home/carl/AnghaBench/Atlas/src/extr_network-mysqld-binlog.c_network_mysqld_proto_append_binlog_dump.c'
source_filename = "/home/carl/AnghaBench/Atlas/src/extr_network-mysqld-binlog.c_network_mysqld_proto_append_binlog_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@COM_BINLOG_DUMP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @network_mysqld_proto_append_binlog_dump(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @COM_BINLOG_DUMP, align 4
  %7 = call i32 @network_mysqld_proto_append_int8(i32* %5, i32 %6)
  %8 = load i32*, i32** %3, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @network_mysqld_proto_append_int32(i32* %8, i32 %11)
  %13 = load i32*, i32** %3, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @network_mysqld_proto_append_int16(i32* %13, i32 %16)
  %18 = load i32*, i32** %3, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @network_mysqld_proto_append_int32(i32* %18, i32 %21)
  %23 = load i32*, i32** %3, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @g_string_append(i32* %23, i32 %26)
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @network_mysqld_proto_append_int8(i32* %28, i32 0)
  ret i32 0
}

declare dso_local i32 @network_mysqld_proto_append_int8(i32*, i32) #1

declare dso_local i32 @network_mysqld_proto_append_int32(i32*, i32) #1

declare dso_local i32 @network_mysqld_proto_append_int16(i32*, i32) #1

declare dso_local i32 @g_string_append(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
